# OGLProject

./: .gitignore  CMakeLists.txt  mksp.sh
CMake/: Utility.cmake
CMake/Modules/: FindGLFW3.cmake
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/App/src/App/: main.cpp
src/GLAD/: CMakeLists.txt
src/GLAD/include/glad/: glad.h
src/GLAD/src/glad/: glad.c
src/Window/: CMakeLists.txt
