# Main application used for testing
add_subdirectory(App)

# Core modules like containers, wrappers, etc.
add_subdirectory(Core)

# Render moduleused for 2/3D Graphics
add_subdirectory(Render)

# Window module used wor windows, input and system events.
add_subdirectory(Window)

# GLAD (GL Loader Generator)
add_subdirectory(GLAD)
